crates/ddlog-syntax/tests/parse/fail/unclosed_paren.rast
ROOT@0..118
  COMMENT@0..108 "// kind:expr validate ..."
  WHITESPACE@108..109 "\n"
  PAREN_EXPR@109..118
    L_PAREN@109..110 "("
    PAREN_EXPR@110..117
      L_PAREN@110..111 "("
      PAREN_EXPR@111..116
        L_PAREN@111..112 "("
        NUMBER@112..115
          NUMBER_LITERAL@112..115 "100"
        R_PAREN@115..116 ")"
      R_PAREN@116..117 ")"
    WHITESPACE@117..118 "\n"
--
Error: expected ')' but instead the file ends
   ,-[parse/fail/unclosed_paren.dl:2:10]
   |
 2 | (((100))
   *          | 
   *          `- the file ends here
---'
--
// kind:expr validate:false pass:false ignore:false file:'ddlog-syntax/src/parser/expr.rs' line:510 column:3
(((100))
